# PIVA_protocol

./: .gitignore  Cargo.toml  README.md  bench.sh  check.sh
.cargo/: config.toml
piva-cli/: Cargo.toml
piva-cli/src/: main.rs
piva-cli/src/bridge/: evm.rs  mod.rs
piva-cli/src/handlers/: asset.rs  identity.rs  mod.rs  node.rs
piva-core/: Cargo.toml  build.rs
piva-core/proto/: piva.proto
piva-core/src/: asset.rs  cache.rs  conversions.rs  iso20022.rs  lib.rs  made.rs  magic.rs  market.rs  multimedia.rs  network.rs  rwa.rs  scoring.rs  swap.rs  tables.rs  verified_storage.rs  verified_storage_old.rs
piva-core/src/rwa/: iso20022.rs  market.rs  matching.rs  multisig.rs  scoring.rs
piva-core/tests/: integrity_stress.rs  made_integration_test.rs  memory_stress.rs
piva-crypto/: Cargo.toml
piva-crypto/src/: hashing.rs  keypair.rs  lib.rs
piva-iso/: Cargo.toml
piva-iso/src/: iso20022.rs  lib.rs  templates.rs
piva-net/: Cargo.toml
piva-net/src/: config.rs  identity.rs  lib.rs  lineage.rs  network.rs  node.rs  node_broken.rs  tests.rs
piva-net/tests/: integration_test.rs
piva-storage/: Cargo.toml
piva-storage/src/: lib.rs  scoring.rs  storage.rs  tables.rs  verified.rs
piva-storage/tests/: scoring_integration_test.rs
piva-types/: Cargo.toml
piva-types/src/: lib.rs
