[workspace]
members = [
    "piva-core",
    "piva-storage", 
    "piva-crypto",
    "piva-net",
    "piva-iso",
    "piva-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PIVA Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/piva-protocol/piva"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Cryptography (Performance-compiled)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand_chacha = "0.3"
rand_core = "0.6"

# Serialization ultra-lightweight (Zero overhead)
borsh = { version = "1.5", features = ["derive"] }
serde_arrays = "0.1"
serde-big-array = "0.5"

# Storage and Database
redb = "2.1"
jemallocator = "0.5"

# Networking
iroh = "0.28"
iroh-net = "0.28"
blake3 = { version = "1.5", features = ["traits-preview"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }

# CLI and Utilities
clap = { version = "4.4", features = ["derive", "string"] }
hex = "0.4"
base64 = "0.22"
dirs = "5.0"
toml = "0.8"
quick-xml = "0.31"

# Interoperability EVM (No heavy ethers library)
alloy-sol-types = "0.7"
alloy-primitives = "0.7"
alloy-signer = "0.7"
alloy-signer-local = "0.7"

# Protocol Buffers
prost = "0.13"
prost-build = "0.13"

# Performance and Memory
mimalloc = "0.1"
parking_lot = "0.12"
async-trait = "0.1"

[profile.release]
lto = "fat"            
opt-level = "z"        # Prioridad: Tamaño del binario (cache-friendly)
panic = "abort"        
codegen-units = 1      
strip = "symbols"      # Elimina símbolos para reducir de ~50MB a ~10MB
incremental = false    # Evita basura residual en el build final

[profile.dev]
opt-level = 1          # Optimización ligera en desarrollo para 512 MB
debug = false          # Sin símbolos de debug para ahorrar espacio
