[package]
name = "piva-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
piva-crypto = { path = "../piva-crypto" }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
serde_arrays = "0.1"
serde-big-array = "0.5"
thiserror = { workspace = true }
tracing = { workspace = true }
prost.workspace = true
jemallocator = { workspace = true }
rand = "0.8"
regex = "1.10"
rand_core = "0.6"

[dev-dependencies]
tokio = { workspace = true }
piva-storage = { path = "../piva-storage" }
tempfile = "3.10"

[build-dependencies]
prost-build.workspace = true
