[package]
name = "piva-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
tiny-keccak = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
