[package]
name = "piva-types"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-big-array = { workspace = true }
hex = { workspace = true }
piva-crypto = { path = "../piva-crypto" } 
anyhow = { workspace = true }
thiserror = { workspace = true }
